===========================================================================

Moqui Framework 1.3.0 is a major new feature and bug fix release. The major
new features include the EntityFacade Data Document, Data Feed, and Data
Search (based on ElasticSearch) features, the User Notification Message
feature, and various improvements to XML Screens and Forms. This release is
backward compatible with Moqui Framework release 1.2.0.

When updating to Moqui 1.3.0 from 1.2.0 or earlier existing databases may
need to be updated because the Entity Facade now uses full entity names
(with the package included in the name) for everything. The
SequenceValueItem.seqName may contain plain entity names (without package)
that need to be changed to full entity names (with package). This can be
done by adding records with the full entity name in the seqName field with
the same value as the original record in seqNum.

New Features:

- Updated Gradle build files to work with Gradle 1.6 (may not work with
  earlier versions)
- Updated Apache Camel to 2.11.0, Apache Commons Validator to 1.4.0,
  ehcache to 2.6.6, Groovy to 2.1.3
- Added ElasticSearch 0.90.0 and Lucene 4.2.1 (these add ~15MB, moving
  Moqui from ~24MB to ~39MB); ElasticSearch files are under
  runtime/elasticsearch and it is initialized and destroyed with the rest
  of the framework
- Both ElasticSearch and Camel can be disabled to not init automatically
- Entity Facade
  - Added EntityDynamicView.addRelationshipMember() method to easily add
    member-entity based on relationship definition
  - Added Entity Data Document feature configured by DataDocument* entities
    which produce a sort of view entity (built on the fly with
    EntityDynamicView); the actual data documents are nested Maps and Lists
    produced by the EntityFacade.getDataDocuments() method
  - Added Entity Data Feed feature configured by DataFeed* entities; a feed
    is associated with one or more DataDocuments that are pushed to a