@@ -9,7 +9,9 @@ Moqui Framework 1.3.0 is a major new feature and bug fix release. The major
 new features include the EntityFacade Data Document, Data Feed, and Data
 Search (based on ElasticSearch) features, the User Notification Message
 feature, and various improvements to XML Screens and Forms. This release is
-backward compatible with Moqui Framework release 1.2.0.
+backward compatible with Moqui Framework release 1.2.0 with the exception
+that the StatusValidChange entity is deprecated by the new
+StatusFlowTransition entity.
 
 When updating to Moqui 1.3.0 from 1.2.0 or earlier existing databases may
 need to be updated because the Entity Facade now uses full entity names
@@ -30,6 +32,9 @@ New Features:
   runtime/elasticsearch and it is initialized and destroyed with the rest
   of the framework
 - Both ElasticSearch and Camel can be disabled to not init automatically
+- Introduced StatusFlow, StatusFlowItem and StatusFlowTransition entities
+  for improved status flow support. A StatusItem may be used in multiple
+  flows, each flow having its own set of status items and transitions.
 - Entity Facade
   - Added EntityDynamicView.addRelationshipMember() method to easily add
     member-entity based on relationship definition
